// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`execute "remove event" prop function 1`] = `
<Modal
  appElement={null}
  ariaHideApp={true}
  bodyOpenClassName="ReactModal__Body--open"
  className="Modal"
  closeTimeoutMS={0}
  isOpen={false}
  parentSelector={[Function]}
  portalClassName="ReactModalPortal"
  role="dialog"
  shouldCloseOnEsc={true}
  shouldCloseOnOverlayClick={true}
  shouldFocusAfterRender={true}
  shouldReturnFocusAfterClose={true}
>
  <div
    className="Modal__Flex Modal__Header"
  >
    <h4
      className="Modal__Title"
    />
    <button
      aria-label="Close modal"
      className="Button Button--Unstyled Button--Large"
    >
      X
    </button>
  </div>
  <div
    className="Modal__Content Modal__Flex"
  >
    Test
    <button
      className="Button Button--Delete"
      onClick={[Function]}
    >
      Delete event
    </button>
  </div>
</Modal>
`;

exports[`render with modal component 1`] = `
<Modal
  appElement={null}
  ariaHideApp={true}
  bodyOpenClassName="ReactModal__Body--open"
  className="Modal"
  closeTimeoutMS={0}
  isOpen={false}
  parentSelector={[Function]}
  portalClassName="ReactModalPortal"
  role="dialog"
  shouldCloseOnEsc={true}
  shouldCloseOnOverlayClick={true}
  shouldFocusAfterRender={true}
  shouldReturnFocusAfterClose={true}
>
  <div
    className="Modal__Flex Modal__Header"
  >
    <h4
      className="Modal__Title"
    />
    <button
      aria-label="Close modal"
      className="Button Button--Unstyled Button--Large"
    >
      X
    </button>
  </div>
  <form
    className="Modal__Content Modal__Flex"
    onSubmit={[Function]}
  >
    <select
      onChange={[Function]}
    >
      <option
        key="default"
      >
        Select one option
      </option>
      <option
        key="holiday"
        value="holiday"
      >
        Holiday
      </option>
      <option
        key="birthday"
        value="birthday"
      >
        Birthday
      </option>
      <option
        key="busy"
        value="busy"
      >
        Busy
      </option>
      <option
        key="anniversary"
        value="anniversary"
      >
        Anniversary
      </option>
    </select>
    <button
      className="Button"
    >
      Add event
    </button>
  </form>
</Modal>
`;
